# esg-report

./: .env  ENHANCED_SYSTEM_SUMMARY.md  FINAL_ADVISORY_SYSTEM_SUMMARY.md  README.md  app.py  docker-compose.yml  gradio_app.py  gradio_app_advisor.py  gradio_app_beautiful.py  gradio_app_workflow.py  install.py  main.py  pyproject.toml  requirements-clean.txt  requirements-minimal.txt  requirements.txt
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  chat.py  documents.py  health.py  search.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  document_processor.py  mistral_client.py  weaviate_client.py
docs/: API.md
documents/uploads/: .gitkeep
frontend/: Dockerfile  app.py  requirements.txt
scripts/: setup.sh  test.sh
src/: __init__.py  config.py  document_processor.py  enhanced_report_generator.py  llm_service.py  report_generator.py
src/agents/: __init__.py  base_agent.py  conversation_agent.py  enhanced_search_agent.py  eu_knowledge_manager.py  knowledge_manager.py  orchestrator.py  regulations_agent.py  report_advisor_agent.py  search_agent.py
vector_database/: README.md  parse_pdf.py  requirements.txt  run_pipeline.py  search_documents.py  vector_database.py
vector_database/docs/: PE-43-2024-INIT_en.txt
vector_database/vectorstore/: config.pkl  faiss.index  metadata.pkl  texts.pkl
