[project]
name = "esg-report"
version = "0.1.0"
description = "Agentic ESG Report Generation Tool with Real-time Regulation Updates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "crewai>=0.28.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
    "asyncio",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.0",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
    "pip>=25.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
